--- a/config/envs/authoring-ha.yaml
+++ b/config/envs/authoring-ha.yaml
@@ -53,6 +53,10 @@ console:
       metadata:
         name: "{{.ApplicationName}}-{{.ConsoleName}}"
 
+## KIE smartrouter BEGIN
+smartrouter:
+  omit: true
+## KIE smartrouter END
 # MySQL/ES/AMQ BEGIN
 others:
   - persistentVolumeClaims:
