--- a/config/envs/authoring.yaml
+++ b/config/envs/authoring.yaml
@@ -30,6 +30,10 @@ console:
             targetPort: 8001
       metadata:
         name: "{{.ApplicationName}}-rhpamcentr"
+## KIE smartrouter BEGIN
+smartrouter:
+  omit: true
+## KIE smartrouter END
 ## KIE Servers BEGIN
 servers:
   ## RANGE BEGINS
