--- a/deploy/crs/kieapp_immutable_kieserver.yaml
+++ b/deploy/crs/kieapp_immutable_kieserver.yaml
@@ -4,12 +4,10 @@ metadata:
   name: immutablekie
 spec:
   environment: immutable-kieserver
-  build:
-    kieServerContainerDeployment: rhpam-kieserver-library=org.openshift.quickstarts:rhpam-kieserver-library:1.4.0-SNAPSHOT
-    gitSource:
-      uri: https://github.com/jboss-container-images/rhpam-7-openshift-image.git
-      reference: master
-      contextDir: quickstarts/library-process/library
-    webhooks:
-      - type: GitHub
-        secret: secret123!
+  objects:
+    build:
+      kieServerContainerDeployment: rhpam-kieserver-library=org.openshift.quickstarts:rhpam-kieserver-library:1.4.0-SNAPSHOT
+      gitSource:
+        uri: https://github.com/jboss-container-images/rhpam-7-openshift-image.git
+        reference: master
+        contextDir: quickstarts/library-process/library
