--- a/deploy/crs/kieapp_production-immutable.yaml
+++ b/deploy/crs/kieapp_production-immutable.yaml
@@ -5,8 +5,8 @@ metadata:
 spec:
   environment: production-immutable
   objects:
-    build:
-      kieServerContainerDeployment: rhpam-kieserver-library=org.openshift.quickstarts:rhpam-kieserver-library:1.4.0-SNAPSHOT
+    builds:
+    - kieServerContainerDeployment: rhpam-kieserver-library=org.openshift.quickstarts:rhpam-kieserver-library:1.4.0-SNAPSHOT
       gitSource:
         uri: https://github.com/jboss-container-images/rhpam-7-openshift-image.git
         reference: master
