--- a/deploy/crds/kieapp_crd.yaml
+++ b/deploy/crds/kieapp_crd.yaml
@@ -50,6 +50,11 @@ spec:
                 console:
                   type: object
                   description: Configuration of the RHPAM workbench
+#                  anyOf:
+#                  - required:
+#                    - env
+#                  - required:
+#                    - resources
                   properties:
                     env:
                       type: array
@@ -74,11 +79,11 @@ spec:
                             description: Source for the environment variable's value
                     resources:
                       type: object
-                      # anyOf:
-                      # - required:
-                      #   - limits
-                      # - required:
-                      #   - requests
+#                      anyOf:
+#                      - required:
+#                       - limits
+#                      - required:
+#                       - requests
                       properties:
                         limits:
                           type: object
@@ -87,6 +92,11 @@ spec:
                 server:
                   type: object
                   description: Configuration of the RHPAM KIE server
+#                  anyOf:
+#                  - required:
+#                    - env
+#                  - required:
+#                    - resources
                   properties:
                     env:
                       type: array
@@ -124,6 +134,11 @@ spec:
                 smartrouter:
                   type: object
                   description: Configuration of the RHPAM smart router
+#                  anyOf:
+#                  - required:
+#                    - env
+#                  - required:
+#                    - resources
                   properties:
                     env:
                       type: array
@@ -148,11 +163,11 @@ spec:
                             description: Source for the environment variable's value
                     resources:
                       type: object
-                      # anyOf:
-                      # - required:
-                      #   - limits
-                      # - required:
-                      #   - requests
+#                      anyOf:
+#                      - required:
+#                        - limits
+#                      - required:
+#                        - requests
                       properties:
                         limits:
                           type: object
@@ -209,11 +224,11 @@ spec:
             auth:
               type: object
               description: Authentication integration configuration
-              # oneOf:
-              # - required:
-              #   - sso
-              # - required:
-              #   - ldap
+#              oneOf:
+#              - required:
+#                - sso
+#              - required:
+#                - ldap
               properties:
                 sso:
                   type: object
@@ -244,17 +259,17 @@ spec:
                     clients:
                       type: object
                       description: Client definitions used for creating the RH-SSO clients in the specified Realm
-                      # anyOf:
-                      # - required:
-                      #   - console
-                      # - required:
-                      #   - servers
+#                      anyOf:
+#                      - required:
+#                        - console
+#                      - required:
+#                        - servers
                       properties:
                         console:
                           type: object
                           description: Console client definition
-                          # required:
-                          #   - name
+#                          required:
+#                          - name
                           properties:
                             name:
                               type: string
@@ -276,8 +291,8 @@ spec:
                           items:
                             type: object
                             description: Single Server client definition
-                            # required:
-                            # - name
+#                            required:
+#                            - name
                             properties:
                               name:
                                 type: string
