--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -8,6 +8,7 @@ required = [
   "k8s.io/code-generator/cmd/informer-gen",
   "k8s.io/code-generator/cmd/openapi-gen",
   "k8s.io/gengo/args",
+  "golang.org/x/sync/errgroup",
 ]
 
 [[override]]
