increment version, add console url to CR spec, CSV fixes
Signed-off-by: tchughesiv <tchughesiv@gmail.com>

--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -4,6 +4,8 @@ metadata:
   name: kie-cloud-operator
 spec:
   replicas: 1
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       name: kie-cloud-operator
@@ -13,11 +15,9 @@ spec:
         name: kie-cloud-operator
     spec:
       serviceAccountName: kie-cloud-operator
-      strategy:
-        type: Recreate
       containers:
         - name: kie-cloud-operator
-          image: quay.io/kiegroup/kie-cloud-operator
+          image: quay.io/kiegroup/kie-cloud-operator:v0.1.0
           ports:
             - containerPort: 60000
               name: metrics
